--- a/Codigo/Frota/FrotaWeb/Views/Veiculo/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Veiculo/Edit.cshtml
@@ -1,7 +1,14 @@
+@using Core.DTO
 @model FrotaWeb.Models.VeiculoViewModel
+
+@{
+	var unidades = ViewData["Unidades"] as IEnumerable<UnidadeAdministrativaDTO> ?? Enumerable.Empty<UnidadeAdministrativaDTO>();
+	var modelos = ViewData["Modelos"] as IEnumerable<ModeloVeiculoDTO> ?? Enumerable.Empty<ModeloVeiculoDTO>();
+}
 
 <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/form.css" asp-append-version="true" />
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
 <main class="container mt-4">
 	<h4 class="page-title fs-2">
@@ -15,18 +22,20 @@
 			<div class="col-md-6">
 				<div class="type-container offset-md-1 itens-center">
 					<label asp-for="IdUnidadeAdministrativa" class="label">Unidade Administrativa</label>
-					<select asp-for="IdUnidadeAdministrativa" class="custom-select">
-						<option value="" disabled selected hidden>Administrativo</option>
-
+					<select asp-for="IdUnidadeAdministrativa" class="custom-select select2">
+						@if (!unidades.Any())
+						{
+							<option value="" disabled selected hidden>Administrativo</option>
+						}
+						else
+						{
+							foreach (var unidade in unidades)
+							{
+								<option value="@unidade.Id">@unidade.Nome</option>
+							}
+						}
 					</select>
 					<span asp-validation-for="IdUnidadeAdministrativa" class="text-danger"></span>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="type-container offset-md-2 itens-center">
-					<label asp-for="IdFrota" class="label">Frota</label>
-					<input asp-for="IdFrota" class="form-control" placeholder="Frota" />
-					<span asp-validation-for="IdFrota" class="text-danger"></span>
 				</div>
 			</div>
 		</div>
@@ -57,7 +66,19 @@
 			<div class="col-md-6">
 				<div class="type-container offset-md-2 itens-center">
 					<label asp-for="IdModeloVeiculo" class="label">Modelo Veículo</label>
-					<input asp-for="IdModeloVeiculo" class="form-control" placeholder="Modelo Veículo" />
+					<select asp-for="IdModeloVeiculo" class="custom-select select2">
+						@if (!modelos.Any())
+						{
+							<option value="" disabled selected hidden>Modelo</option>
+						}
+						else
+						{
+							foreach (var modelo in modelos)
+							{
+								<option value="@modelo.Id">@modelo.Nome</option>
+							}
+						}
+					</select>
 					<span asp-validation-for="IdModeloVeiculo" class="text-danger"></span>
 				</div>
 			</div>
@@ -139,7 +160,21 @@
 
 @section Scripts {
 	<script src="~/js/form.js" asp-append-version="true"></script>
+	<!-- Pra os campos select -->
+	<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 	@{
 		await Html.RenderPartialAsync("_ValidationScriptsPartial");
 	}
+	<script>
+		// Campos select
+		$(document).ready(function () {
+			$(".select2").select2({
+				language: {
+					noResults: function () {
+						return "Não encontrado";
+					}
+				}
+			})
+		});
+	</script>
 }
