--- a/Codigo/Frota/FrotaWeb/Views/Manutencao/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Manutencao/Create.cshtml
@@ -63,14 +63,14 @@
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" style="margin-left: 100px;"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" style="margin-left: 100px;">Back to List</a>
 </div>
 
 @section Scripts {
