--- a/Codigo/Frota/FrotaWeb/Views/Manutencao/Delete.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Manutencao/Delete.cshtml
@@ -74,7 +74,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" style="margin-left: 100px"; /> |
+        <a asp-action="Index" style="margin-left: 100px;">Back to List</a>
     </form>
 </div>
