--- a/Codigo/Frota/FrotaWeb/wwwroot/css/navBar.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/navBar.css
@@ -93,7 +93,7 @@ button.toggle {
 }
 
 .sidebar.open .toggle {
-    rotate: 180deg;
+    transform: rotate(180deg);
 }
 
 .sidebar .inner {
@@ -101,7 +101,6 @@ button.toggle {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 260px;
 }
 
 .sidebar .header {
@@ -146,7 +145,7 @@ button.toggle {
         height: 50px;
         width: 4px;
         background: #0C69AB; /* Cor da barra de destaque */
-        translate: 0 var(--top);
+        transform: translate(0, var(--top));
         transition: 0.3s;
     }
 
@@ -202,7 +201,7 @@ button.toggle {
 }
 
 .sidebar.open .logo {
-    scale: 1;
+    transform: scale(1);
 }
 
 .sidebar .menu button > img {
@@ -308,4 +307,36 @@ button.toggle {
 
 .expand-icon {
     margin-left: auto; /* Move o ícone de expansão para a direita */
+}
+
+/* Deixa o menu aberto para telas grades */
+@media (min-width: 768px) {
+    .sidebar {
+        width: var(--width-open) !important;
+    }
+
+        .sidebar .menu button p,
+        .sidebar .header h1 {
+            opacity: 1 !important;
+        }
+
+        .sidebar .toggle {
+            display: none !important;
+        }
+}
+
+/* Para recolher o menu aberto em telas pequenas */
+@media (max-width: 767px) {
+    .sidebar {
+        width: var(--width-closed);
+    }
+
+        .sidebar .menu button p,
+        .sidebar .header h1 {
+            opacity: 0;
+        }
+
+        .sidebar .toggle {
+            display: block;
+        }
 }
