--- a/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/site.css
@@ -49,136 +49,34 @@ body {
     color: var(--bg);
 }
 
-/* Menu */
-
-.wrapper, #content {
-    width: 100%;
-    height: 100%;
-}
-
-
-#sidebar {
-    min-width: 270px;
-    max-width: 270px;
-    background: #08448c;
-    color: #fff;
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-}
-
-    #sidebar .h6 {
-        color: #fff;
-    }
-
-    #sidebar.active {
-        margin-left: -270px;
-    }
-
-        #sidebar.active .custom-menu {
-            margin-right: -50px;
-        }
-
-    #sidebar h1 {
-        margin-bottom: 20px;
-        font-weight: 700;
-    }
-
-        #sidebar h1 .logo {
-            color: #fff;
-        }
-
-    #sidebar ul.components {
-        padding: 0;
-    }
-
-    #sidebar ul li {
-        font-size: 16px;
-    }
-
-        #sidebar ul li > ul {
-            margin-left: 10px;
-        }
-
-            #sidebar ul li > ul li {
-                font-size: 14px;
-            }
-
-        #sidebar ul li a {
-            padding: 10px 0;
-            display: block;
-            color: rgba(255, 255, 255, 255);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.6);
-        }
-
-            #sidebar ul li a:hover {
-                color: rgba(255, 255, 255, 0.3)
-            }
-
-        #sidebar ul li.active > a {
-            background: transparent;
-            color: rgba(255, 255, 255, 0.6);
-        }
-    /**/
-    /*
-@media (max-width: 991.98px) {
-    #sidebar {
-        margin-left: -270px;
-    }
-        #sidebar .custom-menu {
-            margin-right: -60px !important;
-            top: 10px !important;
-        }
-}
-*/
-
-    #sidebar .custom-menu {
-        display: inline-block;
-        position: absolute;
-        top: 20px;
-        right: 2px;
-        margin-right: -20px;
-        -webkit-transition: 0.3s;
-        -o-transition: 0.3s;
-        transition: 0.3s;
-    }
-
-#sidebar {
-    position: absolute;
-    z-index: 1000;
-    min-height: 100%;
-}
-
-#sidebarCollapse {
-    z-index: 1001;
-}
-
-@media (prefers-reduced-motion: reduce) {
-    #sidebar .custom-menu {
-        -webkit-transition: none;
-        -o-transition: none;
-        transition: none;
-    }
-}
-
-#sidebar .custom-menu .btn {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-}
-
-    #sidebar .custom-menu .btn.btn-primary {
-        background: #08448c;
-        border-color: #08448c;
-    }
-
-        #sidebar .custom-menu .btn.btn-primary:hover, #sidebar .custom-menu .btn.btn-primary:focus {
-            background: #08448c !important;
-            border-color: #08448c !important;
-        }
-
 /* Modal de Deslogar */
 button.close:focus {
     outline: none;
     box-shadow: none;
+}
+
+#content {
+    margin-left: 300px;
+    transition: margin-left 0.3s ease;
+    width: calc(100% - 360px);
+}
+
+
+.sidebar:not(.open) + #content {
+    margin-left: 80px;
+    width: calc(100% - 80px);
+}
+
+/* Ajustes para telas pequenas */
+@media (max-width: 767px) {
+    #content {
+        margin-left: 64px;
+        width: calc(100% - 64px);
+    }
+
+    .sidebar.open + #content {
+        margin-left: 300px;
+        transition: margin-left 0.3s ease;
+        width: calc(100% - 360px);
+    }
 }
