--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,6 +7,8 @@
 }
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <title>Frota Pública</title>
+    <link rel="icon" type="image/x-icon" href="~/logo.ico">
     <style>
         header, #sidebar {
             display: none;
