correções no menu, #246.

--- a/Codigo/Frota/FrotaWeb/Views/Veiculo/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Veiculo/Index.cshtml
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" href="~/css/index-pages.css" asp-append-version="true" />
 
-<main class="main_content container">
+<div class="container-main">
     <div class="titulo-pagina">
         <a href="javascript:history.back()" class="voltar">
             <i class="fa fa-arrow-left"></i> Voltar
@@ -122,4 +122,4 @@
             }
         </nav>
     }
-</main>
+</div>
