--- a/Codigo/Frota/FrotaWeb/Views/Home/Index.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<link rel="stylesheet" href="~/css/home.css">
 
-<div class="text-center banner">
+<div class="container-main text-center banner">
     <h1 class="display-4 welcome-text">Bem-vindo ao FrotaPública!</h1>
     <img src="/img/logo.svg" alt="Logo" class="banner-image">
 </div>
