--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using FrotaWeb.Areas.Identity.Data
+@using Core;
 
 @inject SignInManager<UsuarioIdentity> SignInManager
 @inject UserManager<UsuarioIdentity> UserManager
