--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using FrotaWeb.Areas.Identity
 @using FrotaWeb.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using FrotaWeb.Areas.Identity.Data
+@using Core;
