Finalizada a estilização e padronização do formulário de cadastro, adequada a funcionalidade redefinição de senha

--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -144,7 +144,7 @@
             }
 
                 .form button:hover {
-                    background-color: #155cb0;
+                    background-color: #0B83D9;
                 }
 
         .register-link {
@@ -279,7 +279,6 @@
                 </div>
                 <div class="register-link">
                     <a asp-page="./ForgotPassword">Esqueceu a senha?</a>
-                    <div>Não tem uma conta?<a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Registre-se</a></div>
                 </div>
             </div>
         </form>
