--- a/Codigo/Frota/FrotaWeb/wwwroot/css/form-pages.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/form-pages.css
@@ -25,13 +25,13 @@ body {
         text-decoration: none;
     }
 
-.voltar i:hover {
-    color: #0C69AB;
-}
+        .titulo-pagina .voltar:hover {
+            color: #0C69AB;
+        }
 
     .titulo-pagina h1 {
         height: 50px;
-        font-size: 30px;
+        font-size: 35px;
         font-weight: 700;
         margin: 0;
         color: #333;
@@ -41,45 +41,89 @@ body {
     margin-top: 3%;
     background: #ffffff;
     border-radius: 10px;
-    padding: 20px;
+    padding: 30px;
     max-width: 900px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
 }
 
-.form {
+form {
     display: flex;
-    flex-wrap: wrap; /* Permite que os campos quebrem de linha se necessário */
-    gap: 20px; /* Espaço entre os campos */
-    justify-content: space-between; /* Distribui os campos uniformemente */
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-between;
 }
 
-.form-group{
+.form-group {
     display: flex;
     flex-direction: column;
-    flex-grow: 0; /* Evita que os elementos cresçam desproporcionalmente */
+    flex-grow: 0;
     flex-shrink: 0;
+    margin-bottom: 15px;
 }
 
+    .form-group.w10 {
+        width: calc(10% - 10px);
+        min-width: 80px;
+    }
+
     .form-group.w20 {
-        width: 20%; /* Extra pequeno */
+        width: calc(20% - 10px);
+        min-width: 160px;
+    }
+
+    .form-group.w30 {
+        width: calc(30% - 10px);
+        min-width: 240px;
     }
 
     .form-group.w40 {
-        width: 40%; /* Pequeno */
+        width: calc(40% - 10px);
+        min-width: 320px;
+    }
+
+    .form-group.w50 {
+        width: calc(50% - 10px);
+        min-width: 420px;
     }
 
     .form-group.w60 {
-        width: 60%; /* Médio */
+        width: calc(60% - 10px);
+        min-width: 490px;
+    }
+
+    .form-group.w70 {
+        width: calc(70% - 10px);
+        min-width: 580px;
     }
 
     .form-group.w80 {
-        width: 80%; /* Grande */
+        width: calc(80% - 10px);
+        min-width: 660px;
+    }
+
+    .form-group.w90 {
+        width: calc(90% - 10px);
+        min-width: 740px;
     }
 
     .form-group.w100 {
-        width: 100%; /* Extra grande */
+        width: 100%;
     }
 
+/* Para telas pequenas */
+@media (max-width: 768px) {
+    .form-group[class*="w"] {
+        width: 100% !important;
+    }
+}
+
+.divisor {
+    width: 90%;
+    height: 1px;
+    background-color: #dee2e6;
+    margin: 0px auto;
+    border: none;
+}
 
 .form-group label {
     color: #0C69AB;
@@ -96,7 +140,7 @@ body {
         background-color: #fff;
         font-size: 18px;
         color: #000000;
-        height: 45px;
+        height: 40px;
     }
 
         .form-group input:focus {
@@ -149,7 +193,6 @@ select.custom-select {
 .btn-group-toggle {
     height: 50px;
     display: flex;
-    gap: 10px;
 }
 
     .btn-group-toggle label{
@@ -169,27 +212,25 @@ select.custom-select {
 
     /* Ativo */
     .btn-group-toggle .btn-outline-success {
-        color: #28a745;
-        background-color: #fff;
-        border-color: #28a745;
+        color: #ffffff;
+        background-color: rgba(0, 0, 0, 0.25);
     }
 
         .btn-group-toggle .btn-outline-success:hover,
         .btn-group-toggle .btn-outline-success:focus {
-            background-color: #28a745;
+            background-color: rgba(0, 0, 60, 0.5);
             color: #fff;
         }
 
     /* Inativo */
     .btn-group-toggle .btn-outline-danger {
-        color: #dc3545;
-        background-color: #fff;
-        border-color: #dc3545;
+        color: #ffffff;
+        background-color: rgba(0, 0, 0, 0.25);
     }
 
         .btn-group-toggle .btn-outline-danger:hover,
         .btn-group-toggle .btn-outline-danger:focus {
-            background-color: #dc3545;
+            background-color: rgba(0, 0, 60, 0.5);
             color: #fff;
         }
 
@@ -198,7 +239,6 @@ select.custom-select {
     border-color: #007bff;
     background-color: #007bff;
     color: #fff;
-    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
 }
 
 /* Alinhamento da mensagem de erro */
@@ -208,19 +248,19 @@ select.custom-select {
 }
 
 
-    .buttons input {
-        min-width: 120px;
-        padding: 10px 20px;
-        font-size: 1em;
-        color: white;
-        background-color: #0C69AB;
-        border: none;
-        border-radius: 10px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
+.buttons input {
+    min-width: 120px;
+    padding: 10px 20px;
+    font-size: 1em;
+    color: white;
+    background-color: #0C69AB;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
 
     .buttons input:hover {
-        background-color: #155cb0;
+        background-color: #0B83D9;
     }
 
